<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="intan203110029.flowers.StartFragment">

    <data>
        <variable
            name="startFragment"
            type="intan203110029.flowers.StartFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/side_margin">

            <ImageView
                android:layout_width="@dimen/image_size"
                android:layout_height="@dimen/image_size"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_between_elements"
                android:importantForAccessibility="no"
                android:scaleType="center"
                app:srcCompat="@drawable/bungaicon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/side_margin"
                android:text="@string/order_flower"
                android:textAppearance="?attr/textAppearanceHeadline4"
                android:textColor="@color/material_on_background_emphasis_medium" />
<!-- @{() -> startFragment.orderCupcake(_) menetukan jumlah yang dipesan yangkan dikalikan dengan harga per1-->
            <Button
                android:id="@+id/order_one_cupcake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_between_elements"
                android:minWidth="@dimen/order_cupcake_button_width"
                android:onClick="@{() -> startFragment.orderCupcake(1)}"
                android:text="@string/one_flower"
                app:backgroundTint="@android:color/holo_blue_light" />

            <Button
                android:id="@+id/order_six_cupcakes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_between_elements"
                android:minWidth="@dimen/order_cupcake_button_width"
                android:onClick="@{() -> startFragment.orderCupcake(6)}"
                android:text="@string/six_cupcakes"
                app:backgroundTint="@android:color/holo_blue_light" />

            <Button
                android:id="@+id/order_twelve_cupcakes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_between_elements"
                android:minWidth="@dimen/order_cupcake_button_width"
                android:onClick="@{() -> startFragment.orderCupcake(12)}"
                android:text="@string/twelve_cupcakes"
                app:backgroundTint="@android:color/holo_blue_light" />

            <Button
                android:id="@+id/special"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_between_elements"
                android:minWidth="@dimen/order_cupcake_button_width"
                android:onClick="@{() -> startFragment.orderCupcake(20)}"
                android:text="@string/special_flavor"
                app:backgroundTint="@android:color/holo_blue_light" />
        </LinearLayout>
    </ScrollView>
</layout>